mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: mongodb
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/back-end-network: "true"
        io.kompose.service: mongodb
    spec:
      containers:
      - args:
        - mongod
        - --noauth
        image: mongo
        imagePullPolicy: ""
        name: mongodb
        ports:
        - containerPort: 27017
        resources: {}
        volumeMounts:
        - mountPath: /data/database
          name: appDB
      hostname: mongodb
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: appDB
        persistentVolumeClaim:
          claimName: appDB
status: {}
