back-end-network-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: back-end-network
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/back-end-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/back-end-network: "true"
